# python-modules-

./: README.md
ex1/: ft_plot_area.py
ex5/: ft_count_harvest_iterative.py
module 00/ex1/: ft_plot_area.py
module 00/ex2/: ft_harvest_total.py
module 00/ex4/: ft_water_reminder.py
module 00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
module 00/ex6/: ft_garden_summary.py
module 00/ex7/: ft_seed_inventory.py
module 01/ex0/: ft_garden_intro.py  shebang.py
module 01/ex1/: ft_garden_data.py
module 01/ex2/: ft_plant_growth.py
module 01/ex3/: ft_plant_factory.py
module 01/ex4/: ft_garden_security.py
module 01/ex5/: ft_plant_types.py
module 01/ex6/: ft_garden_analytics.py
module 02/ex0/: ft_first_exception.py
module 02/ex1/: ft_different_errors.py
module 02/ex2/: ft_custom_errors.py
module 02/ex3/: ft_custom_errors.py  ft_finally_block.py
module 02/ex4/: ft_raise_errors.py
module 02/ex5/: ft_garden_management.py
module 03/ex0/: ft_command_quest.py
module 03/ex1/: ft_score_analytics.py
module 03/ex2/: ft_coordinate_system.py
module 03/ex3/: ft_achievement_tracker.py
module 03/ex4/: ft_inventory_system.py
module 03/ex5/: ft_data_stream.py  yield.py
module 03/ex6/: ft_analytics_dashboard.py
module 04/: sample_data.json
module 04/ex0/: ft_ancient_text.py
module 04/ex1/: ft_archive_creation.py
module 05/: stream_processor.py
module 06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
module 08/ex01/: loading.py  pyproject.toml  requirements.txt
(+43 files in other folders)
